<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StatusActivity"
    tools:showIn="@layout/activity_status" >

    <TextView
        android:id="@+id/gps_txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/binggrae"
        android:paddingTop="30dp"
        android:text="@string/guest_0"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/gps_list_1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp">

    </ListView>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="30dp">

        <RadioButton
            android:id="@+id/radio_guest1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:text="@string/guest_1" />

        <RadioButton
            android:id="@+id/radio_guest2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/guest_2" />

        <RadioButton
            android:id="@+id/radio_guest3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/guest_3" />

        <RadioButton
            android:id="@+id/radio_guest4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/guest_4" />

        <RadioButton
            android:id="@+id/radio_guest5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/guest_5" />

    </RadioGroup>

    <TextView
        android:id="@+id/gps_txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/binggrae"
        android:paddingTop="10dp"
        android:text="@string/guest_1"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/gps_list_2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp" />

</LinearLayout>