<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Notic_text"
        android:textAlignment="center"
        android:textColor="#F7EBA3A0"
        android:textSize="50sp"
        android:textStyle="bold"
        app:fontFamily="@font/jalnan"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="225dp"
        android:layout_height="290dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="99dp"
            android:layout_height="99dp"
            android:onClick="checkAlert"
            android:text="@string/Notic_check"
            app:fontFamily="@font/jalnan"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="checkAlert"
            android:text="@string/Notic_check"
            app:fontFamily="@font/jalnan"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="checkAlert"
            android:text="@string/Notic_check"
            app:fontFamily="@font/jalnan"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/button4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="checkAlert"
            android:text="@string/Notic_check"
            app:fontFamily="@font/jalnan"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/button5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="checkAlert"
            android:text="@string/Notic_check"
            app:fontFamily="@font/jalnan"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/button6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="checkAlert"
            android:text="@string/Notic_check"
            app:fontFamily="@font/jalnan"
            app:layout_column="2"
            app:layout_row="2" />
    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/btn_reset"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:background="#FFFFFF"
        android:onClick="resetAlert"
        android:text="@string/btn_reset"
        android:textColor="#E91E63"
        app:fontFamily="@font/jalnan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.162" />

    <Button
        android:id="@+id/btn_check"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="180dp"
        android:background="#FFFFFF"
        android:onClick="checkMe"
        android:text="@string/check_start"
        android:textColor="#E91E63"
        android:textStyle="bold"
        app:fontFamily="@font/jalnan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_reset"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.162" />

</androidx.constraintlayout.widget.ConstraintLayout>